Adding some configuration for rust

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "displayName": "Treeko",
     "description": "A modified gruvbox theme",
     "version": "0.0.1",
+    "publisher": "edujtm",
+    "repository": "https://github.com/edujtm/treeko-theme",
     "engines": {
         "vscode": "^1.62.0"
     },
